2005-05-23 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b26

	* Fix: register globals in setup/check_versions.php

2005-05-23 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b25

	* NEW: Added Donald Websters Microthumb Code. => album version and config bump.

	* Change: removed ml_pulldown.inc, 
		  instead created function languageSelector() in lang.php

	* Change: Unified layout for all admin pages.

	* Change: Enhanced classes/HTML/table.php

2005-05-20 Pierre-Luc Paour <paour@users.sourceforge.net>  1.5.1-cvs-b24

	* Change: Applets version 1.4.2-b20.

2005-05-10 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b23

	* Change: Change input for count of files/meta files a input box instead of comboxbox

	* New: added file:lib/valchecks.php with function isValidInteger. Its included via util.php.

2005-05-09  Jay Rossiter <cryptographite@users.sf.net>  1.5.1-cvs-b22

	* Change:  Config wiz typo

2005-05-09 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b21

	* Change: Merged Poll options and Custom fields into properties

	* New: Made folder include/definitions, which is supposed to contain static definition.
	       Currently added: (print) Services

	* Change: Minor GUI changes.

	* New: Added a classes/HTML folder, which is supposed to contain classes and method for html handling.
	       Currently added is only a very rudimental table class :)

2005-05-08 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b20

	* Fix: Custom fields were not set recursively (register globals issue)

	* Fix: remove Debug Code.

2005-05-06 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b19

	* Fix: RFE #1192462  (catch invalid manuell input of $set_AlbumListPage and $page via URL)

	* Change: minor tweak of getAlbum

2005-05-02 Stupid Tkotz <jens@peino.de>  1.5.1-cvs-b18

	* Fix: More typos. Sorry, next time i pay more attention.

2005-05-02 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b17

	* Fix: typo in classes/Album.php introduced in b16

2005-05-02 Jens A. Tkotz <jens@peino.de>  1.5.1-cvs-b16
