@@ -424,6 +424,9 @@ caption {
     text-align:center;
     padding:5px;
     margin-left:10px;
+
+    text-decoration:underline;
+    font-weight:bold;
 }
 
 .tab-hi {
@@ -435,8 +438,12 @@ caption {
     text-align:center;
     padding:5px;
     margin-left:10px;
+
+    text-decoration:underline;
+    font-weight:bold;
 }
 
+/* Outdated, will be removed soon */
 .tab-text { 
     text-decoration:underline; 
     font-weight:bold;
