@@ -304,7 +304,8 @@ textarea:focus, input:focus {
 	   background-color: #C0C0C0;
 	 }
 
-.popup td,th {
+
+._popup td,th {
     color: #000000;
 }
 
