@@ -1,3 +1,10 @@
+2005-05-24 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b27
+
+	* Fix: use_exif was not broken in album properties.
+	       Found by Johanm Nenni
+
+	* Change: removed class tab-text, the font color is now controlled by the tab itself.
+
 2005-05-23 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b26
 
 	* Fix: register globals in setup/check_versions.php
